--- a/School.Web/Views/Admission/Form.cshtml
+++ b/School.Web/Views/Admission/Form.cshtml
@@ -1248,18 +1248,15 @@
 
         // Show alert
         function showAlert(message, type) {
-            const alert = `
-                <div class="alert alert-${type} alert-dismissible fade show" role="alert">
-                    ${message}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            `;
-            $('#alertContainer').html(alert);
-
-            // Auto-hide after 5 seconds
-            setTimeout(() => {
-                $('.alert').alert('close');
-            }, 5000);
+            if (type === 'success') {
+                toastSuccess(message);
+            } else if (type === 'danger' || type === 'error') {
+                toastError(message);
+            } else if (type === 'warning') {
+                toastWarning(message);
+            } else {
+                toastInfo(message);
+            }
         }
 
         // Keyboard navigation
