--- a/School.Web/Views/Roles/Index.cshtml
+++ b/School.Web/Views/Roles/Index.cshtml
@@ -347,7 +347,7 @@
         <div class="card-header d-flex justify-content-between align-items-center">
             <h5><i class="bi bi-shield-lock me-2"></i>Role Permissions</h5>
             <div class="d-flex gap-2">
-                <button type="button" class="btn btn-success" onclick="openAddRoleModal()">
+                <button type="button" class="btn btn-primary" onclick="openAddRoleModal()">
                     <i class="bi bi-plus-lg me-1"></i> Add Role
                 </button>
                 <button type="button" class="btn btn-primary" id="btnSavePermissions" onclick="savePermissions()" style="display: none;">
